# yaml-adapter

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  converage.yml
examples/: keymatch_policy.yaml  rbac_policy.yaml  rbac_with_domains_policy.yaml
src/: lib.rs  models.rs  yaml_adapter.rs
tests/: test.rs
