[package]
name = "yaml-adapter"
version = "0.1.0"
authors = ["closetool <4closetool3@gmail.com>"]
edition = "2018"
description = "a adapter which reads yaml format policy file for casbin repo"
repository = "https://github.com/casbin-rs/yaml-adapter"
homepage = "https://github.com/casbin-rs/yaml-adapter"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
async-trait = "0.1.40"
casbin = { version = "2.2", default-features = false }
tokio = { version = "1.36.0", default-features = false, optional = true, features = ["test-util"] }
async-std = { version = "1.6.4", default-features = false, optional = true }

[dev-dependencies]
async-std = { version = "1.6.4", features = [ "attributes" ] }
tokio = { version = "1.36.0", features = [ "full" ] }

[features]
default = ["runtime-async-std"]

runtime-async-std = ["casbin/runtime-async-std","async-std"]
runtime-tokio     = ["casbin/runtime-tokio", "tokio/fs", "tokio/io-util"]
